Implemented findDatesByRoomId(int roomId)